--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-plus": "^2.3.9",
+    "eslint-plugin-html": "^7.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
